[gd_scene load_steps=2 format=3 uid="uid://dligp8huc1h18"]

[ext_resource type="Script" uid="uid://b0tkqjhmp6og0" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="HostGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
text = "Host Game"

[node name="JoinGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Join Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/HostGameButton" to="." method="_on_host_game_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/JoinGameButton" to="." method="_on_join_game_button_pressed"]
